--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -21,12 +21,12 @@
     </p>
 
     <!-- Call-to-Action Button -->
-    <button routerLink="/buyer-login"  type="button" class="btn btn-primary w-100  py-3 mb-3">Let’s Get Started</button>
+    <button routerLink="/buyer-register"  type="button" class="btn btn-primary w-100  py-3 mb-3">Let’s Get Started</button>
 
     <!-- Sign-Up Link -->
     <p class="mt-4">
       <span class="text-muted">Already have an account?</span>
-      <a href="#" class="link">Sign Up</a>
+      <a routerLink="/buyer-login"  class="link">Sign In</a>
     </p>
   </div>
 </div>
