sign up page and routing for to the auth pages

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 <div class="landing-page vh-100 d-flex align-items-center justify-content-center bg-light">
   <div class="card shadow-lg p-5 text-center">
     
+    
     <!-- Logo -->
     <div class="logo-container mb-4">
       <img src="images/landing-logo.png" alt="Logo" class="img-fluid" style="width: 270px; height: 316px;" />
@@ -21,12 +22,12 @@
     </p>
 
     <!-- Call-to-Action Button -->
-    <button routerLink="/buyer-login"  type="button" class="btn btn-primary w-100  py-3 mb-3">Let’s Get Started</button>
+    <button routerLink="/buyer-register"  type="button" class="btn btn-primary w-100  py-3 mb-3">Let’s Get Started</button>
 
     <!-- Sign-Up Link -->
     <p class="mt-4">
       <span class="text-muted">Already have an account?</span>
-      <a href="#" class="link">Sign Up</a>
+      <a routerLink="/buyer-login"  class="link">Sign Up</a>
     </p>
   </div>
 </div>
