forgot password and password manager

--- a/src/app/pages/buyer/auth-page/auth-page.component.html
+++ b/src/app/pages/buyer/auth-page/auth-page.component.html
@@ -113,8 +113,10 @@
 
           </div>
 
-          <button type="submit" class="btn btn-primary w-100">Confirm Email</button>
-
+          <button routerLink="/forgot-password" type="submit" class="btn btn-primary w-100" data-bs-dismiss="modal">
+            Confirm Email
+          </button>
+          
         </form>
 
       </div>
