--- a/src/app/components/chat-system/chat-system.component.css
+++ b/src/app/components/chat-system/chat-system.component.css
@@ -1,8 +1,9 @@
 body {
-  background-color: var(--seondary-background);
+  background-color: #ffffff;
   margin-top: 20px;
-  
+  font-family: "Inter", sans-serif;
 }
+
 .card {
   background: #ffffff;
   transition: 0.5s;
@@ -14,6 +15,7 @@ body {
   width: 100%;
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
 }
+
 .chat-app .people-list {
   width: 280px;
   position: absolute;
@@ -21,6 +23,8 @@ body {
   top: 0;
   padding: 20px;
   z-index: 7;
+  background-color: #3c5a5d;
+  border-radius: 25px;
 }
 
 .chat-app .chat {
@@ -28,35 +32,29 @@ body {
   border-left: 1px solid #eaeaea;
 }
 
-.people-list {
-  -moz-transition: 0.5s;
-  -o-transition: 0.5s;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  background-color: var(--green-buttons-links);
-}
-
 .people-list .chat-list li {
   padding: 10px 15px;
   list-style: none;
-  border-radius: 3px;
+  border-radius: 10px;
 }
 
 .people-list .chat-list li:hover {
-  background: #efefef;
+  background: #f6f6f6;
   cursor: pointer;
 }
 
 .people-list .chat-list li.active {
-  background: #efefef;
+  background: #f6f6f6;
 }
 
 .people-list .chat-list li .name {
-  font-size: 15px;
+  font-size: 16px;
+  color: black;
+  font-weight: 400;
 }
 
 .people-list .chat-list img {
-  width: 45px;
+  width: 50px;
   border-radius: 50%;
 }
 
@@ -76,14 +74,15 @@ body {
 }
 
 .chat .chat-header {
-  padding: 15px 20px;
+  padding: 20px;
   border-bottom: 2px solid #f4f7f6;
+  background: #3c5a5d;
+  border-radius: 25px 25px 0 0;
 }
 
 .chat .chat-header img {
-  float: left;
-  border-radius: 40px;
-  width: 40px;
+  width: 50px;
+  border-radius: 50%;
 }
 
 .chat .chat-header .chat-about {
@@ -114,17 +113,17 @@ body {
 }
 
 .chat .chat-history .message-data img {
-  border-radius: 40px;
-  width: 40px;
+  border-radius: 50%;
+  width: 50px;
 }
 
 .chat .chat-history .message-data-time {
-  color: #434651;
+  color: #000000;
   padding-left: 6px;
 }
 
 .chat .chat-history .message {
-  color: #444;
+  color: #0c1415;
   padding: 18px 20px;
   line-height: 26px;
   font-size: 16px;
@@ -229,8 +228,7 @@ body {
   }
   .chat-app .chat .chat-header {
     border-radius: 0.55rem 0.55rem 0 0;
-    background-color: var(--green-buttons-links);
-
+    background-color: #3c5a5d;
   }
   .chat-app .chat-history {
     height: 300px;
