added a comment for later use

--- a/src/app/components/chat-system/chat-system.component.html
+++ b/src/app/components/chat-system/chat-system.component.html
@@ -143,9 +143,9 @@
               <li class="clearfix">
                 <div class="message-data">
                   <span class="message-data-time">10:12 AM, Today</span>
-                </div>
+                </div> 
                 <div class="message my-message">Are we meeting today?</div>
-              </li>
+              </li> <!-- I want to put it at the button like whatsApp -->
               <li class="clearfix">
                 <div class="message-data">
                   <span class="message-data-time">10:15 AM, Today</span>
