runner order details

--- a/src/app/pages/buyer/auth-page/auth-page.component.html
+++ b/src/app/pages/buyer/auth-page/auth-page.component.html
@@ -41,13 +41,13 @@
 
     <!-- Email Input -->
 
-    <input type="email" class="form-control px-3 py-2" placeholder="johndoe@gmail.com" />
+    <input type="email" class="form-control px-3 py-2" placeholder="johndoe@gmail.com" required />
 
 
 
     <!-- Password Input -->
 
-    <input type="password" class="form-control px-3 py-2" placeholder="**************" />
+    <input type="password" class="form-control px-3 py-2" placeholder="**************" required />
 
 
 
@@ -116,7 +116,7 @@
           <button routerLink="/forgot-password" type="submit" class="btn btn-primary w-100" data-bs-dismiss="modal">
             Confirm Email
           </button>
-          
+
         </form>
 
       </div>
