--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,11 @@
-<p>search works!</p>
+<div class="container">
+    <div class="search-bar">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search..." aria-label="Search"
+                aria-describedby="search-addon">
+            <button class="btn btn-outline-secondary" type="button" id="search-addon">
+                <i class="fas fa-search"></i>
+            </button>
+        </div>
+    </div>
+</div>
